[project]
name = "asksage-cli"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Gregory Kent", email = "gregokent@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "asksageclient>=1.31",
    "requests>=2.32.4",
]

[project.scripts]
asksage_cli = "asksage_cli:main"

[build-system]
requires = ["uv_build>=0.8.6,<0.9.0"]
build-backend = "uv_build"
